--- a/index.html
+++ b/index.html
@@ -235,11 +235,10 @@
     <!-- Popups -->
     <div id="apiKeyPopup" class="popup">
         <div class="popup-content">
-            <h2>הגדר API Key</h2>
-            <input type="text" id="apiKeyInput" placeholder="הזן API Key">
+            <h2>סטטוס API Key</h2>
+            <p id="apiKeyStatus"></p>
             <div class="popup-footer">
-                <button class="control-button" onclick="saveApiKey()">שמור</button>
-                <button class="control-button" onclick="closePopup('apiKeyPopup')">ביטול</button>
+                <button class="control-button" onclick="closePopup('apiKeyPopup')">סגור</button>
             </div>
         </div>
     </div>
@@ -259,7 +258,7 @@
                     <i class="fas fa-microphone"></i> התחל הקלטה
                 </button>
                 <div id="recordingStatus" style="display: none;">
-                    <p>יש הקלטה בזיכרון</p>
+                    <p>יש הקלטה בזכרון</p>
                     <button class="control-button" onclick="deleteRecording()">מחק הקלטה</button>
                 </div>
             </div>
@@ -296,7 +295,7 @@
                 <li>היכנסו לאתר <a href="https://console.groq.com" target="_blank">console.groq.com</a></li>
                 <li>הירשמו או התחברו לחשבון</li>
                 <li>לחצו על "Create API Key"</li>
-                <li>העתיקו את המפתח שנוצר</li>
+                <li>העתיקו את המפתח שנצר</li>
             </ol>
             <h3>איך להשתמש באתר:</h3>
             <ol>
@@ -325,13 +324,12 @@
 
     <script>
         let transcriptionResult;
-        let apiKey;
+        const apiKey = 'YOUR_API_KEY_PLACEHOLDER'; // זה יוחלף בזמן הבנייה
         let audioBlob;
         let mediaRecorder;
         let isRecording = false;
-        let audioSource = null; // 'file' או 'record'
+        let audioSource = null;
 
-        let originalApiKey = '';
         let originalAudioFile = null;
         let originalAudioBlob = null;
         let originalWordsPerSubtitle = '8';
@@ -339,27 +337,14 @@
         let selectedFile = null;
 
         function showPopup(popupId) {
-            document.getElementById(popupId).style.display = 'flex';
             if (popupId === 'apiKeyPopup') {
-                originalApiKey = document.getElementById('apiKeyInput').value;
-            } else if (popupId === 'audioInputPopup') {
-                // איפוס הבחירה הקודמת
-                document.querySelectorAll('.tab-button').forEach(btn => btn.classList.remove('active'));
-                document.querySelectorAll('.tab-content').forEach(content => content.style.display = 'none');
-                audioSource = null;
-                selectedFile = null;
-                audioBlob = null;
-                updateRecordingStatus();
-            } else if (popupId === 'settingsPopup') {
-                originalWordsPerSubtitle = document.getElementById('wordsPerSubtitle').value;
+                updateApiKeyStatus();
             }
+            document.getElementById(popupId).style.display = 'flex';
         }
 
         function closePopup(popupId) {
-            // ביטול השינויים
-            if (popupId === 'apiKeyPopup') {
-                document.getElementById('apiKeyInput').value = originalApiKey;
-            } else if (popupId === 'audioInputPopup') {
+            if (popupId === 'audioInputPopup') {
                 document.getElementById('audioFile').value = '';
                 if (originalAudioFile) {
                     const dataTransfer = new DataTransfer();
@@ -374,15 +359,14 @@
             document.getElementById(popupId).style.display = 'none';
         }
 
-        function saveApiKey() {
-            const inputApiKey = document.getElementById('apiKeyInput').value.trim();
-            if (inputApiKey) {
-                localStorage.setItem('groqApiKey', inputApiKey);
-                apiKey = inputApiKey;
-                showMessage('ה-API Key נשמר בהצלחה!');
-                document.getElementById('apiKeyPopup').style.display = 'none';
+        function updateApiKeyStatus() {
+            const statusElement = document.getElementById('apiKeyStatus');
+            if (apiKey && apiKey !== 'YOUR_API_KEY_PLACEHOLDER') {
+                statusElement.textContent = 'API Key תקין ומוכן לשימוש.';
+                statusElement.style.color = 'green';
             } else {
-                showMessage('אנא הזן API Key תקין');
+                statusElement.textContent = 'API Key לא נטען. אנא פנה למנהל המערכת.';
+                statusElement.style.color = 'red';
             }
         }
 
@@ -480,22 +464,9 @@
             }
         }
 
-        async function loadApiKey() {
-            try {
-                apiKey = localStorage.getItem('groqApiKey');
-                if (apiKey) {
-                    document.getElementById('apiKeyInput').value = apiKey;
-                }
-            } catch (error) {
-                console.error('שגיאה בטעינת API Key:', error);
-                apiKey = null;
-            }
-        }
-
         async function transcribe() {
-            if (!apiKey) {
-                showMessage('אנא הגדר API Key תחילה');
-                showPopup('apiKeyPopup');
+            if (apiKey === 'YOUR_API_KEY_PLACEHOLDER') {
+                showMessage('API Key לא הוגדר כראוי. אנא פנה למנהל המערכת.');
                 return;
             }
 
@@ -529,6 +500,11 @@
                         showMessage(`מתמלל חלק ${i + 1} מתוך ${audioChunks.length}...`, 0);
                         const chunkResult = await transcribeChunk(audioChunks[i]);
                         transcriptionResult.segments = transcriptionResult.segments.concat(chunkResult.segments);
+                        
+                        if (i < audioChunks.length - 1) {
+                            showMessage(`ממתין 2 דקות לפני תמלול החלק הבא...`, 0);
+                            await new Promise(resolve => setTimeout(resolve, 120000)); // המתנה של 2 דקות
+                        }
                     }
                 } else {
                     transcriptionResult = await transcribeChunk(audioFile);
@@ -539,8 +515,6 @@
             } catch (error) {
                 console.error('שגיאה בתמלול:', error);
                 showMessage('אירעה שגיאה בתמלול. אנא בדוק את ה-API Key שלך ונסה שוב.');
-                localStorage.removeItem('groqApiKey');
-                apiKey = null;
             } finally {
                 document.getElementById('loader').style.display = 'none';
                 document.getElementById('transcribeButton').disabled = false;
@@ -599,9 +573,13 @@
                 transcriptionResult.segments.forEach((segment) => {
                     const subtitles = splitIntoSubtitles(segment.text, segment.start, segment.end, wordsPerSubtitle);
                     subtitles.forEach((subtitle) => {
-                        srtFormat += `${subtitleIndex}\n`;
-                        srtFormat += `${formatTime(subtitle.start)} --> ${formatTime(subtitle.end)}\n`;
-                        srtFormat += `${subtitle.text}\n\n`;
+                        srtFormat += `${subtitleIndex}
+`;
+                        srtFormat += `${formatTime(subtitle.start)} --> ${formatTime(subtitle.end)}
+`;
+                        srtFormat += `${subtitle.text}
+
+`;
                         plainText += subtitle.text + ' ';
                         subtitleIndex++;
                     });
@@ -779,8 +757,8 @@
             return result.choices[0].message.content;
         }
 
-        // קריאה לפונקציות אתחול
-        loadApiKey();
+        // קריאה לפונקציית אתחול
+        document.addEventListener('DOMContentLoaded', updateApiKeyStatus);
     </script>
 </body>
 </html>
